@@ -74,16 +74,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|Locale
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|Map
 import|;
 end_import
@@ -105,18 +95,6 @@ operator|.
 name|util
 operator|.
 name|TreeMap
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|stream
-operator|.
-name|Collectors
 import|;
 end_import
 
@@ -4442,6 +4420,17 @@ specifier|final
 name|PointValues
 name|pointValues
 decl_stmt|;
+DECL|field|memoryFields
+specifier|private
+name|Fields
+name|memoryFields
+init|=
+operator|new
+name|MemoryFields
+argument_list|(
+name|fields
+argument_list|)
+decl_stmt|;
 DECL|method|MemoryIndexReader
 specifier|private
 name|MemoryIndexReader
@@ -5084,102 +5073,12 @@ name|Fields
 name|fields
 parameter_list|()
 block|{
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|Info
-argument_list|>
-name|filteredFields
-init|=
-name|fields
-operator|.
-name|entrySet
-argument_list|()
-operator|.
-name|stream
-argument_list|()
-operator|.
-name|filter
-argument_list|(
-name|entry
-lambda|->
-name|entry
-operator|.
-name|getValue
-argument_list|()
-operator|.
-name|numTokens
-operator|>
-literal|0
-argument_list|)
-operator|.
-name|collect
-argument_list|(
-name|Collectors
-operator|.
-name|toMap
-argument_list|(
-name|Map
-operator|.
-name|Entry
-operator|::
-name|getKey
-argument_list|,
-name|Map
-operator|.
-name|Entry
-operator|::
-name|getValue
-argument_list|,
-parameter_list|(
-name|u
-parameter_list|,
-name|v
-parameter_list|)
-lambda|->
-block|{
-throw|throw
-argument_list|new
-name|IllegalStateException
-argument_list|(
-name|String
-operator|.
-name|format
-argument_list|(
-name|Locale
-operator|.
-name|ROOT
-argument_list|,
-literal|"Duplicate key %s"
-argument_list|,
-name|u
-argument_list|)
-argument_list|)
-argument_list|;
-block|}
-operator|,
-name|TreeMap
-operator|::
-operator|new
-block|)
-block|)
-class|;
-end_class
-
-begin_return
 return|return
-operator|new
-name|MemoryFields
-argument_list|(
-name|filteredFields
-argument_list|)
+name|memoryFields
 return|;
-end_return
-
-begin_class
-unit|}      private
+block|}
 DECL|class|MemoryFields
+specifier|private
 class|class
 name|MemoryFields
 extends|extends
@@ -5230,8 +5129,34 @@ block|{
 return|return
 name|fields
 operator|.
-name|keySet
+name|entrySet
 argument_list|()
+operator|.
+name|stream
+argument_list|()
+operator|.
+name|filter
+argument_list|(
+name|e
+lambda|->
+name|e
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|numTokens
+operator|>
+literal|0
+argument_list|)
+operator|.
+name|map
+argument_list|(
+name|Map
+operator|.
+name|Entry
+operator|::
+name|getKey
+argument_list|)
 operator|.
 name|iterator
 argument_list|()
@@ -5265,6 +5190,12 @@ condition|(
 name|info
 operator|==
 literal|null
+operator|||
+name|info
+operator|.
+name|numTokens
+operator|<=
+literal|0
 condition|)
 block|{
 return|return
@@ -5410,17 +5341,28 @@ name|int
 name|size
 parameter_list|()
 block|{
-return|return
-name|fields
-operator|.
+name|int
 name|size
-argument_list|()
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|String
+name|fieldName
+range|:
+name|this
+control|)
+block|{
+name|size
+operator|++
+expr_stmt|;
+block|}
+return|return
+name|size
 return|;
 block|}
 block|}
-end_class
-
-begin_class
 DECL|class|MemoryTermsEnum
 specifier|private
 class|class
@@ -6052,9 +5994,6 @@ name|ts
 return|;
 block|}
 block|}
-end_class
-
-begin_class
 DECL|class|MemoryPostingsEnum
 specifier|private
 class|class
@@ -6425,9 +6364,6 @@ literal|1
 return|;
 block|}
 block|}
-end_class
-
-begin_class
 DECL|class|MemoryIndexPointValues
 specifier|private
 class|class
@@ -6860,9 +6796,6 @@ return|;
 block|}
 block|}
 block|}
-end_class
-
-begin_function
 annotation|@
 name|Override
 DECL|method|getTermVectors
@@ -6893,9 +6826,6 @@ literal|null
 return|;
 block|}
 block|}
-end_function
-
-begin_function
 annotation|@
 name|Override
 DECL|method|numDocs
@@ -6921,9 +6851,6 @@ return|return
 literal|1
 return|;
 block|}
-end_function
-
-begin_function
 annotation|@
 name|Override
 DECL|method|maxDoc
@@ -6949,9 +6876,6 @@ return|return
 literal|1
 return|;
 block|}
-end_function
-
-begin_function
 annotation|@
 name|Override
 DECL|method|document
@@ -6981,9 +6905,6 @@ argument_list|)
 expr_stmt|;
 comment|// no-op: there are no stored fields
 block|}
-end_function
-
-begin_function
 annotation|@
 name|Override
 DECL|method|doClose
@@ -7006,9 +6927,6 @@ literal|"MemoryIndexReader.doClose"
 argument_list|)
 expr_stmt|;
 block|}
-end_function
-
-begin_function
 annotation|@
 name|Override
 DECL|method|getNormValues
@@ -7048,9 +6966,6 @@ name|getNormDocValues
 argument_list|()
 return|;
 block|}
-end_function
-
-begin_function
 annotation|@
 name|Override
 DECL|method|getIndexSort
@@ -7063,16 +6978,10 @@ return|return
 literal|null
 return|;
 block|}
-end_function
-
-begin_comment
-unit|}
+block|}
 comment|/**    * Resets the {@link MemoryIndex} to its initial state and recycles all internal buffers.    */
-end_comment
-
-begin_function
 DECL|method|reset
-unit|public
+specifier|public
 name|void
 name|reset
 parameter_list|()
@@ -7131,9 +7040,6 @@ operator|=
 literal|false
 expr_stmt|;
 block|}
-end_function
-
-begin_class
 DECL|class|SliceByteStartArray
 specifier|private
 specifier|static
@@ -7406,8 +7312,8 @@ argument_list|()
 return|;
 block|}
 block|}
+block|}
 end_class
 
-unit|}
 end_unit
 
