@@ -400,6 +400,20 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|IndexReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|IndexableField
 import|;
 end_import
@@ -1152,6 +1166,97 @@ operator|.
 name|checkReader
 argument_list|(
 name|reader
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testFieldsOnlyReturnsIndexedFields
+specifier|public
+name|void
+name|testFieldsOnlyReturnsIndexedFields
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|NumericDocValuesField
+argument_list|(
+literal|"numeric"
+argument_list|,
+literal|29L
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|TextField
+argument_list|(
+literal|"text"
+argument_list|,
+literal|"some text"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|MemoryIndex
+name|mi
+init|=
+name|MemoryIndex
+operator|.
+name|fromDocument
+argument_list|(
+name|doc
+argument_list|,
+name|analyzer
+argument_list|)
+decl_stmt|;
+name|IndexSearcher
+name|searcher
+init|=
+name|mi
+operator|.
+name|createSearcher
+argument_list|()
+decl_stmt|;
+name|IndexReader
+name|reader
+init|=
+name|searcher
+operator|.
+name|getIndexReader
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|reader
+operator|.
+name|getTermVectors
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|size
+argument_list|()
+argument_list|,
+literal|1
 argument_list|)
 expr_stmt|;
 block|}
